# Project-c

Build3/: Makefile  Makefile.am  Makefile.in  Municipality.txt  P1municipal-elections-project.glade.bak.bak.bak.bak  P1municipal-elections-project.glade.bak.bak.bak.bakp  config.h  config.status  configure  configure.in  fileuser.txt  pstfile.txt  selected.txt
Build3/autom4te.cache/: output.0  requests  traces.0  traces.1
Build3/po/: Makefile  Makefile.in
Build3/src/: Functionpst1.c  Functionpst1.h  Makefile  Makefile.am  Makefile.in  build3  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  user1_function.h
